k8s/breath-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: breath-cluster-ip-service
spec: 
  type: ClusterIP
  selector:
    component: web
  ports: 
    - port: 3000
      targetPort: 3000
