k8s/breath-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: breath-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: web
  template: 
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: breath
          image: lucasfds/breath
          ports:
            - containerPort: 3000
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "breath-loadbalancer-service"
  namespace: "default"
  labels:
    component: "web"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 3000
  selector:
    component: "web"
  type: "LoadBalancer"
  loadBalancerIP: breath-ip
# apiVersion: v1
# kind: Service
# metadata:
#   name: breath-cluster-ip-service
# spec: 
#   type: ClusterIP
#   selector:
#     component: web
#   ports: 
#     - port: 80
#       targetPort: 3000
