k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.global-static-ip-name: breath-ip
    networking.gke.io/managed-certificates: breath-certificate
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend: 
              serviceName: breath-cluster-ip-service
              servicePort: 3000
